# graintrack_store

./: .env  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  dump_db.sql  pyproject.toml  requirements.txt
config/: urls.py
config/settings/: settings.py
graintrack_store/api/v1/: urls.py
graintrack_store/api/v1/auth/: serializers.py  urls.py  views.py
graintrack_store/api/v1/orders/: urls.py
graintrack_store/api/v1/orders/order_products/: serializers.py  views.py
graintrack_store/api/v1/orders/orders/: serializers.py  views.py
graintrack_store/api/v1/products/: urls.py
graintrack_store/api/v1/products/product_categories/: serializers.py  views.py
graintrack_store/api/v1/products/product_discounts/: serializers.py  views.py
graintrack_store/core/: apps.py  constants.py  models.py  utils.py
graintrack_store/core/adapters/repositories/: base.py
graintrack_store/core/adapters/services/: base.py
graintrack_store/core/adapters/validators/: base.py
graintrack_store/core/api/: serializers.py  views.py
graintrack_store/orders/: apps.py  constants.py  models.py
graintrack_store/orders/migrations/: 0001_initial.py  0002_alter_order_order_code_and_more.py  0002_alter_orderproduct_unique_together.py  0003_order_sold_at.py
graintrack_store/products/: apps.py  constants.py  models.py
graintrack_store/products/migrations/: 0001_initial.py
graintrack_store/sales/: apps.py
graintrack_store/users/: apps.py  constants.py  models.py
graintrack_store/users/migrations/: 0001_initial.py
(+33 files in other folders)
